# youtube-stuffs

./: .env.example  .gitignore  Auto_GPT.ipynb  PDFSummarizer.ipynb  PandasAI_demo.ipynb  README.md  huggingface_crash_course.ipynb  image-background-remove-using-python.ipynb  mistralai_with_and_without_llamaindex.ipynb  pyproject.toml  scikit_llm.ipynb  voiceGPT.ipynb
.github/: FUNDING.yml
agentic-ai/: .gitignore  finance_agent.py  multi-agent.py  playground.py  pyproject.toml  web_search_agent.py
agentic-rag/: .env.example  README.md  agentic_rag.py  agentic_rag_ui.py  pyproject.toml  traditional_rag.ipynb  traditional_rag.py
agno/: .env.example  README.md  agent_teams.py  agent_with_knowledge.py  agent_with_tools.py  basic_agent.py  monitoring.py  playground.py
aisuite/: .gitignore  README.md  intro-to-aisuite.ipynb
bedrock-rag-eval-dataset/: rag-evaluator.jsonl
chainlit/: .env.example  .gitignore  README.md  chainlit-ollama-deepseek.py  ingest.py  ingest_llamaparse.py  pyproject.toml  rag-chainlit-deepseek-llamaparse.py  rag-chainlit-deepseek.py
data-cleaning/: example.env  langchain-groq-unstructured-rag.ipynb  unstructured-chunking-and-metadata.ipynb  unstructured-image-extraction-from-pdf.ipynb  unstructured-intro.ipynb  unstructured-table-extraction-from-scanned-pdf.ipynb
data-cleaning/data/: robust_rag.html  uber_10q_march_2022.md
document-parsers/: README.md  docling.ipynb  hello.py  pyproject.toml  requirements.py
langchain/: AutoGPT_with_LangChain.ipynb  Chat_with_Any_Documents_Own_ChatGPT_with_LangChain.ipynb  LangChain_Components.ipynb  LangChain_Multi_modal_RAG.ipynb  LangChain_Usecases.ipynb  OpenAI_function_call.ipynb  OpenAI_new_embeddings.ipynb  PDFSummarizer.ipynb  Quickstart_Guide(Part_1).ipynb  Quickstart_Guide(Part_2).ipynb  README.md  cache_llm_calls.ipynb  chunk_data_effectively.ipynb  exploring_openai_v1_functionality.ipynb  langchain_Semi_Structured_RAG.ipynb  langchain_hub_first_look.ipynb  langchain_intro.ipynb  langchain_json.ipynb  langchain_pandas_dataframe_agent.ipynb  langchain_qdrant.ipynb  langchian_intro.ipynb  sql_chain.ipynb  synthetic_data_generation.ipynb
langgraph/: langgraph.ipynb
litellm-crash-course/: README.md  different_llm_test.ipynb  env.example  pyproject.toml
llamaindex/: Combining_Text_to_SQL_with_Semantic_Search_for_Retrieval_Augmented_Generation.ipynb  LlamaIndex_intro.ipynb  Llama_index_pinecone.ipynb  OpenAI_new_embeddings.ipynb  demo_advanced.ipynb  llamaindex_Semi_Structured_RAG.ipynb  llamaindex_advanced_rag.ipynb  llamaindex_openai_assistant_agent.ipynb  perplexity+llamaindex.ipynb  text_to_sql.ipynb
llamaparse/: .env.example  .gitignore  README.md  demo_layout_agent_mode_visual_citations.ipynb  pyproject.toml
mixmax-stuffs/: Auto_GPT.ipynb  openai_assistant_firstlook.ipynb
train-llama2-chatbot/: README.md  alpaca_dataset_from_huggingface_to_csv.ipynb  finetune_llama2_autotrain.ipynb
vscode-example/: vscode_jupyter_example.ipynb  vscode_python_example.py
watermark/: watermark.ipynb
