[project]
name = "chainlit-deepseek"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chainlit>=2.1.0",
    "langchain-huggingface>=0.1.2",
    "langchain>=0.3.17",
    "openai>=1.60.2",
    "langchain-community>=0.3.16",
    "docling>=2.17.0",
    "qdrant-client>=1.12.1",
    "langchain-ollama>=0.2.3",
    "sentence-transformers>=3.4.1",
    "fastembed>=0.4.2",
    "langchain-qdrant>=0.2.0",
    "llama-parse>=0.5.20",
    "unstructured[md,pdf]>=0.16.17",
    "llama-index>=0.12.15",
    "grpcio==1.60.1",
    "grpcio-status==1.60.1",
    "langchain-groq>=0.2.4",
    "langchain-docling>=0.2.0",
]
