[project]
name = "llamaparse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "llama-index-llms-groq>=0.3.1",
    "llama-index>=0.12.9",
    "llama-index-core>=0.12.9",
    "llama-index-embeddings-ollama>=0.5.0",
    "llama-index-llms-ollama>=0.5.0",
    "llama-parse>=0.5.19",
    "python-dotenv>=1.0.1",
    "llama-index-embeddings-huggingface>=0.4.0",
]
